--- a/zhisuan11core/src/main/resources/plugin.yml
+++ b/zhisuan11core/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: zhisuan11core
-version: '1.0-SNAPSHOT'
+version: '1.0'
 main: org.zhisuan11.zhisuan11core.Zhisuan11core
 api-version: '1.20'
 authors: [RunicDolphin806]
