--- a/zhisuan11core/bin/main/plugin.yml
+++ b/zhisuan11core/bin/main/plugin.yml
@@ -1,7 +1,7 @@
 name: zhisuan11core
 version: '1.0'
-main: org.zhisuan11.zhisuan11core.Zhisuan11core
-api-version: '1.20'
+main: org.zhisuan11.core.Zhisuan11core
+api-version: '1.20-1.21'
 authors: [RunicDolphin806]
 
 # 插件指令名
@@ -22,4 +22,4 @@ permissions:
         default: true
     Zhisuan11.tp:
         description: 允许使用基础传送指令
-        default: true
+        default: false
