更新服务器定时任务

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -20,7 +20,7 @@ JoinMessage:
   - " 欢迎来到MC服务器！ "
 
 # 设置服务器公告
-BroadCast:
+Broadcast:
   enabled: true
   content:
       - "&6 ============================================= "
