--- a/src/main/resources/Quiz.yml
+++ b/src/main/resources/Quiz.yml
@@ -7,7 +7,7 @@ config:
   port: 3306
   name: root
   password:
-  database: zhisuan11     # 须提前新建quiz数据库
+  database: zhisuan11     # 须提前新建zhisuan11数据库
   interval: 900           # 发送Quiz的间隔时间（单位：秒）
 
 # 设置回答时发送的信息
@@ -23,6 +23,7 @@ message:
 
 # YAML示例配置，启用YAML存储类型后生效
 # 每个问题不宜过长
+# 选项不超过255个字符
 List:
   - Question: "以下哪一个不是合法的IP地址？"
     Options:
