--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -57,13 +57,13 @@ Teleport:
 
 # 清理掉落物
 ClearDropItems:
-  enabled: false;
+  enabled: false
   # 清理间隔时间
-  interval: 900;
+  interval: 900
   # 设置警告时间列表
   warnings:
     - 60
     - 30
     - 10
-  message: "&a[zhisuan11core] &e已清理 &b%count% &e个掉落物！"
-  warning: "&e[zhisuan11core] &c警告！&e物品将在 &b%seconds% &e秒后清理！"
+  message: "&a[zhisuan11core] &e已清理&b %count% &e个掉落物！"
+  warning: "&e[zhisuan11core] &c警告！&e 物品将在&b %seconds% &e秒后清理！"
